--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 frontend/gui/node_modules/
+frontend/gui/public/
 backend/env/
 *.pyc
-
 *.log
 *.sql
 *.sqlite
