--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,7 @@ frontend/gui/node_modules/
 frontend/gui/public/
 frontend/gui/build/
 backend/env/
-staticfiles/admin/
-staticfiles/media/
-staticfiles/rest_framework/
-staticfiles/static/
-staticfiles/materialEditor/
+staticfiles/
 *.pyc
 *.log
 *.sql
