--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ frontend/gui/node_modules/
 frontend/gui/public/
 frontend/gui/build/
 backend/env/
+backend/src/portfolio/settings.py
 staticfiles/
 skey
 *.pyc
