--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ frontend/gui/public/
 frontend/gui/build/
 backend/env/
 backend/src/portfolio/settings.py
+backend/src/portfolio/urls.py
 staticfiles/
 
 skey
