--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-frontend/gui/node_modules/
-frontend/gui/public/
-frontend/gui/build/
+frontend/node_modules/
+frontend/public/
+frontend/build/
 backend/env/
 backend/src/portfolio/settings.py
 backend/src/portfolio/urls.py
-staticfiles/
+static/
+.idea
+*.test.js
+setupTests.js
+serviceWorker.js
+.env.development
+*.mp4
 
 skey
 *.pyc
