--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,13 +22,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "collect": "npm run copy-buildfiles && npm run collectstatic",
-    "copy-buildfiles": "npm run copy-build-media && npm run copy-build-js && npm run copy-build-css",
-    "copy-build": "copyfiles -f 'build/*' '../../static/'",
-    "copy-build-media": "copyfiles -f 'build/static/media/*' 'staticfiles/media/'",
-    "copy-build-js": "copyfiles -f 'build/static/js/*' 'staticfiles/static/js/'",
-    "copy-build-css": "copyfiles -f 'build/static/css/*' 'staticfiles/static/css/'",
-    "collectstatic": "python ../../portfolio/backend/src/manage.py collectstatic --no-input"
+    "copy-build": "npm run build && npm run collectstatic",
+    "collectstatic": "./../backend/env/Scripts/activate && python ../../portfolio/backend/src/manage.py collectstatic --no-input"
   },
   "eslintConfig": {
     "extends": "react-app"
