--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "copy-build": "yarn run build && yarn run collectstatic",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "copy-build": "npm run build && npm run collectstatic",
-    "collectstatic": "./../backend/env/Scripts/activate && python ../../portfolio/backend/src/manage.py collectstatic --no-input"
+    "collectstatic": " ../backend/env/Scripts/activate.bat && python ../../portfolio/backend/src/manage.py collectstatic --no-input"
   },
   "eslintConfig": {
     "extends": "react-app"
